# concours-petanque

./: CLAUDE.md  README.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: classement.rs  db.rs  lib.rs  main.rs  models.rs  tirage.rs
src/lib/: invoke.ts  types.ts
src/screens/: Accueil.tsx  Classement.tsx  CreerConcours.tsx  Inscription.tsx  Recherche.tsx  Saisie.tsx  Tirage.tsx
